# esp-extconn

./: CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
include/: esp_extconn.h
priv_include/: esp_extconn_sdmmc.h  esp_sip.h  ext_default.h  ext_sdio_adapter.h  sip2_common.h
src/: esp_sip.c  ext_boot.c  ext_sdio_adapter.c  extconn.c  trans_bt.c  trans_recv.c  trans_wifi.c
